--- a/page3.html
+++ b/page3.html
@@ -55,7 +55,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>&lt; [ Home ]&nbsp;</a></li><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Qualifications</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="index.html#step2-18">Expertise</a><a class="dropdown-item text-white display-4" href="index.html#step1-19" aria-expanded="false">Skills &amp; Knowledge</a><a class="dropdown-item text-white display-4" href="index.html#content8-11" aria-expanded="false">Qualities</a><a class="dropdown-item text-white display-4" href="index.html#progress-bars1-16" aria-expanded="false">Personality</a><a class="dropdown-item text-white text-primary display-4" href="page3.html" aria-expanded="false">Education</a></div>
+                    <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Qualifications</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="index.html#step2-18">Expertise</a><a class="dropdown-item text-white display-4" href="index.html#step1-19" aria-expanded="false">Skills &amp; Knowledge</a><a class="dropdown-item text-white display-4" href="index.html#content8-11" aria-expanded="false">Qualities</a><a class="dropdown-item text-white display-4" href="index.html#progress-bars1-16" aria-expanded="false">Personality</a><a class="dropdown-item text-white text-primary display-4" href="page3.html" aria-expanded="false">Education</a></div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
@@ -127,7 +127,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/foresite-web-logo-sm-220x140.png" class="img-responsive clients-img" alt="">
+                                <img src="assets/images/curtin-university-logo-e1564490912542-200x305.png" class="img-responsive clients-img" alt="">
                             </div>
                         </div>
                     </div>
@@ -167,11 +167,23 @@
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5"><strong>Open University Australia
 </strong></h4>
-                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">Year 2019</p>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">Year 2020 - Present</p>
                         </div>
                         <div class="bottom-line">
-                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Online Study via RMIT 
-<br>Undergrad Bachelor of Science in Information Technology</p>
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Online Study via Curtin University<br><strong>Course: Facilities Management</strong><br><br><em>What I'll learn?</em><br>At the completion of this subject students will be able to:
+<br><em>1. research and analyse the key concepts of facilities management
+<br>2. evaluate how facilities management links to the strategic management of facilities
+<br>3. develop appropriate facilities management techniques to manage a project.</em><br><br><strong>Topics covered:&nbsp;</strong><br>Facilities Managers
+<br>Strategic Facilities Management
+<br>Strategic Planning and Facilities Management
+<br>Service Provider Options
+<br>Facilities Performance
+<br>Managing Assets
+<br>Space Utilization
+<br>Safety and Security
+<br>Constructing New Assets
+<br>Building Maintenance
+<br>Building Refurbishment<br></p>
                         </div>
                     </div>
                 </div>
@@ -181,17 +193,33 @@
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
                         <div class="top-line pb-3">
-                            <h4 class="card-title mbr-fonts-style display-5"><strong>Kangan Batman Institute</strong></h4>
-                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">Year 2013</p>
+                            <h4 class="card-title mbr-fonts-style display-5">Open University Australia</h4>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">Year 2019</p>
                         </div>
                         <div class="bottom-line">
-                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Broadmeadows Victoria, Australia
-<br>Certificate of Real Estate Agent Representative&nbsp;</p>
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Online Study via RMIT 
+<br>Bachelor of Science in Information Technology<br><br><strong>Subject Completed:</strong><br>Database Concepts<br>User-Centered Design<br>Programming 1<br>Introduction to Computer Systems<br>Introduction to Information Technology</p>
                         </div>
                     </div>
                 </div>
             </div>
             <!--Card-3-->
+            <div class="card px-3 col-12">
+                <div class="card-wrapper media-container-row media-container-row">
+                    <div class="card-box">
+                        <div class="top-line pb-3">
+                            <h4 class="card-title mbr-fonts-style display-5">Kangan Batman Institute</h4>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">
+                                Year 2013</p>
+                        </div>
+                        <div class="bottom-line">
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Broadmeadows Victoria, Australia 
+<br>Certificate of Real Estate Agent Representative&nbsp;</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Card-4-->
             <div class="card px-3 col-12">
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
@@ -207,7 +235,7 @@
                     </div>
                 </div>
             </div>
-            <!--Card-4-->
+            <!--Card-5-->
             <div class="card px-3 col-12">
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
@@ -217,7 +245,7 @@
                                 Year 2012</p>
                         </div>
                         <div class="bottom-line">
-                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Sunshine Victoria, Australia Certificate III Transport and Logistic Warehouse Operation
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Sunshine Victoria, Australia Certificate III Transport and Logistic Warehouse Operation 
 <br>LF – Australian Forklift License 
 <br>LO – Australian Order Picker License 
 <br>RF – Scan Packing Competency Cert. 
@@ -228,30 +256,28 @@
                     </div>
                 </div>
             </div>
-            <!--Card-5-->
-            <div class="card px-3 col-12">
-                <div class="card-wrapper media-container-row media-container-row">
-                    <div class="card-box">
-                        <div class="top-line pb-3">
-                            <h4 class="card-title mbr-fonts-style display-5"><strong>WCIG Trade Training
-</strong></h4>
-                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">
-                                Year 2008</p>
-                        </div>
-                        <div class="bottom-line">
-                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Cleanable Property Maintenance Services, Vic Australia.
-<br>Training Certificate in Workplace Professionalism Trading Work</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!--Card-6-->
             <div class="card px-3 col-12">
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
                         <div class="top-line pb-3">
-                            <h4 class="card-title mbr-fonts-style display-5"><strong>University of the EAST, 
-Philippines.</strong></h4>
+                            <h4 class="card-title mbr-fonts-style display-5"><strong>WCIG Trade Training</strong></h4>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">
+                                Year 2008</p>
+                        </div>
+                        <div class="bottom-line">
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Cleanable Property Maintenance Services, Vic Australia. 
+<br>Training Certificate in Workplace Professionalism Trading Work</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Card-7-->
+            <div class="card px-3 col-12">
+                <div class="card-wrapper media-container-row media-container-row">
+                    <div class="card-box">
+                        <div class="top-line pb-3">
+                            <h4 class="card-title mbr-fonts-style display-5"><strong>University of the EAST, Philippines.</strong></h4>
                             <p class="mbr-text cost mbr-fonts-style m-0 display-7">
                                 Year 2007</p>
                         </div>
@@ -262,43 +288,39 @@ Philippines.</strong></h4>
                     </div>
                 </div>
             </div>
-            <!--Card-7-->
-            <div class="card px-3 col-12">
-                <div class="card-wrapper media-container-row media-container-row">
-                    <div class="card-box">
-                        <div class="top-line pb-3">
-                            <h4 class="card-title mbr-fonts-style display-5"><strong>AMA 
-Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div></h4>
-                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">
-                                Year 2004</p>
-                        </div>
-                        <div class="bottom-line">
-                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Home Town: Candelaria Quezon 
-<br>Diploma Certificate of Computer System Network and Technology</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!--Card-8-->
             <div class="card px-3 col-12">
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
                         <div class="top-line pb-3">
-                            <h4 class="card-title mbr-fonts-style display-5"><strong>
-                                TESDA - Mobile Power Technical Training Center</strong>&nbsp;</h4>
+                            <h4 class="card-title mbr-fonts-style display-5">AMA Computer Learning Center, 
+<div>Philippines.</div></h4>
                             <p class="mbr-text cost mbr-fonts-style m-0 display-7">
-                                Year 2001</p>
+                                Year 2004</p>
                         </div>
                         <div class="bottom-line">
-                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">
-                                @ Home Town: Candelaria Quezon<br>Training Certificate in Electronics<br> 
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Home Town: Candelaria Quezon 
+<br>Diploma Certificate of Computer System Network and Technology<br> 
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
             <!--Card-9-->
-            
+            <div class="card px-3 col-12">
+                <div class="card-wrapper media-container-row media-container-row">
+                    <div class="card-box">
+                        <div class="top-line pb-3">
+                            <h4 class="card-title mbr-fonts-style display-5">TESDA - Mobile Power Technical Training Center&nbsp;</h4>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-7">Year 2001</p>
+                        </div>
+                        <div class="bottom-line">
+                            <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">@ Home Town: Candelaria Quezon
+<br>Training Certificate in Electronics</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!--Card-10-->
             
             <!--Card-11-->
@@ -326,7 +348,7 @@ Computer Learning Center,&nbsp;</strong><div><strong>Philippines.</strong></div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">This web page</a> was started with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Start a free <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
